# Milestoneproject1

./: .env.example  .gitignore  Improvements.md  Miletone1.md  Miletone1_PhaseWise_Architecture.md  pyproject.toml  pytest.ini  render.yaml  requirements-api.txt  requirements.txt  streamlit_app.py
.streamlit/: config.toml
data/: dataset_version.json
scripts/: build_cloud_db.py  sync_api_metadata.py
src/: __init__.py
src/phases/: __init__.py
src/phases/phase0/: README.md  __init__.py
src/phases/phase1/: README.md  __init__.py  cli.py  config.py  ingestion.py  preprocess.py  schema.py  service.py  storage.py
src/phases/phase2/: README.md  __init__.py  api.py  cli.py  config.py  dto.py  location_normalize.py  mapping.py
src/phases/phase3/: README.md  __init__.py  cli.py  config.py  integration.py  prompt.py  safety.py  schema.py  selection.py
src/phases/phase4/: README.md  __init__.py  cli.py  config.py  engine.py  enrich.py  env.py  fallback.py  parse.py  schema.py
src/phases/phase5/: README.md  __init__.py  constants.py  response.py  routes.py  schema.py  service.py
src/phases/phase6/: README.md  __init__.py
tests/: test_budget_mapping.py  test_enrich_dedupe.py  test_groq_llm_connection.py
web/: app.js  index.html  styles.css
zomato-ai-scout/: .env.example  README.md  next.config.ts  package-lock.json  package.json
zomato-ai-scout/public/: api-metadata.json
zomato-ai-scout/src/app/: globals.css  layout.tsx  page.tsx
zomato-ai-scout/src/components/: feature-cards.tsx  hero.tsx  recommendation-engine.tsx  site-footer.tsx  site-header.tsx
(+4 files in other folders)
